--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                         <!-- CLUSTERING SLIDER -->
                         <div class="mt-4 pt-4 border-t border-slate-200">
                             <label class="block text-sm font-bold text-slate-700 mb-2">Location Clustering</label>
-                            <input type="range" id="clusterSlider" min="0" max="100" value="50" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer accent-indigo-600" oninput="updateClusterDisplay()">
+                            <input type="range" id="clusterSlider" min="0" max="100" value="15" class="w-full h-2 bg-slate-200 rounded-lg appearance-none cursor-pointer accent-indigo-600" oninput="updateClusterDisplay()">
                             <div class="flex justify-between text-xs text-slate-500 mt-1">
-                                <span>Scatter</span>
-                                <span>Cluster</span>
+                                <span>0% Bonus</span>
+                                <span>100% Bonus</span>
                             </div>
-                            <div class="text-center text-xs font-semibold text-indigo-600 mt-1" id="clusterValueDisplay">Stickiness: 50%</div>
+                            <div class="text-center text-xs font-semibold text-indigo-600 mt-1" id="clusterValueDisplay">Location Bonus: 15%</div>
                         </div>
                     </div>
                 </div>
@@ -298,8 +298,22 @@
         }
 
         function updateClusterDisplay() {
-            const val = document.getElementById('clusterSlider').value;
-            document.getElementById('clusterValueDisplay').innerText = `Stickiness: ${val}%`;
+            const val = parseInt(document.getElementById('clusterSlider').value);
+            const display = document.getElementById('clusterValueDisplay');
+            const slider = document.getElementById('clusterSlider');
+            
+            let text = `Location Bonus: ${val}%`;
+            if (val > 30) {
+                text += " (Danger Zone!)";
+                display.className = "text-center text-xs font-bold text-red-600 mt-1";
+                slider.classList.remove('accent-indigo-600');
+                slider.classList.add('accent-red-600');
+            } else {
+                display.className = "text-center text-xs font-semibold text-indigo-600 mt-1";
+                slider.classList.remove('accent-red-600');
+                slider.classList.add('accent-indigo-600');
+            }
+            display.innerText = text;
         }
 
         // --- HELPER: TIME MATH ---
@@ -976,13 +990,13 @@
             const equitySlider = document.getElementById('equitySlider');
             const equityFactor = equitySlider ? parseInt(equitySlider.value) / 100 : 1;
 
-            // Get Clustering Setting (0 = No Bonus, 100 = High Bonus)
+            // Get Clustering Setting (0-100%)
             const clusterSlider = document.getElementById('clusterSlider');
-            const clusterVal = clusterSlider ? parseInt(clusterSlider.value) : 50;
-            // Map 0-100 to a discount multiplier range.
-            // 0% -> 1.0 (No Discount)
-            // 100% -> 0.7 (30% Discount for same location)
-            const clusterDiscount = (clusterVal / 100) * 0.30;
+            const clusterVal = clusterSlider ? parseInt(clusterSlider.value) : 15;
+            
+            // Map 0-100 to a discount multiplier directly.
+            // 15% -> 0.15 discount -> 0.85 multiplier
+            const clusterDiscount = clusterVal / 100;
             const clusterMultiplier = 1.0 - clusterDiscount;
 
             // Init & Calc Total Burden
