--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EquiRound - Patient Monitor Allocator</title>
+    <title>WardWatch - Patient Monitor Allocator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -62,7 +62,7 @@
         <!-- HEADER -->
         <header class="mb-8 flex flex-col md:flex-row justify-between items-center bg-white p-4 rounded-lg shadow-sm border border-slate-200">
             <div class="text-center md:text-left mb-4 md:mb-0">
-                <h1 class="text-2xl font-bold text-slate-800"><i class="fa-solid fa-heart-pulse text-red-500"></i> EquiRound</h1>
+                <h1 class="text-2xl font-bold text-slate-800"><i class="fa-solid fa-heart-pulse text-red-500"></i> WardWatch</h1>
                 <p class="text-slate-500 text-sm mt-1">Equitable Patient Monitor Allocator</p>
             </div>
             <button onclick="toggleImportModal()" class="bg-slate-700 text-white text-sm px-4 py-2 rounded shadow hover:bg-slate-800 transition">
@@ -79,7 +79,7 @@
                 <!-- 1. SHIFT CONFIG -->
                 <div class="card p-5 border-l-4 border-blue-500">
                     <!-- Renamed Header -->
-                    <h2 class="text-xl font-bold mb-4 text-slate-700">1. Shift & Config</h2>
+                    <h2 class="text-xl font-bold mb-4 text-slate-700">1. Settings</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-4">
                             <div>
