Change title in step 2

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                 <!-- 2. DOCTOR CONFIG -->
                 <div class="card p-5 border-l-4 border-green-500">
-                    <h2 class="text-xl font-bold mb-4 text-slate-700">2. Doctors & Availability</h2>
+                    <h2 class="text-xl font-bold mb-4 text-slate-700">2. Doctors & Preferences</h2>
                     <div class="flex gap-2 mb-3">
                         <input type="text" id="newDocName" placeholder="New Doc Name..." class="flex-1 p-2 border rounded shadow-sm text-sm" onkeydown="if(event.key === 'Enter') addDoctor()">
                         <button onclick="addDoctor()" class="bg-green-600 text-white px-3 py-2 rounded hover:bg-green-700"><i class="fa-solid fa-plus"></i></button>
