--- a/index.html
+++ b/index.html
@@ -1748,7 +1748,7 @@
             document.body.removeChild(textarea);
         }
 
-	function copyCurrentOutput()function copyCurrentOutput() {
+	function copyCurrentOutput() {
             if (!currentAssignment || !currentSchedule) {
                 showToast("Generate a schedule first!");
                 return;
